src/test/deca/context/invalid/provided/ContextSansObjet/IdentificationFloatAssignBool.deca
//Description :
//	affectation d'un boolean à une variable définie comme float
//
//Résultats :
//	Erreur contextuelle
//	Ligne 10 : 

{
	float x;
	x = true;
	println(x);
}